# d9s

./: .gitignore  README.md  d9s.py  pyproject.toml
test-compose/gitea/: compose.yml
test-compose/nginx/: compose.yml
test-compose/nginx/html/: index.html
